# Multimodal_Representation

./: .gitignore  LICENSE  README.md  pyproject.toml  repo_tree.txt  requirements.in
data/: DATA_README.md  datadownloads.md
notebooks/: 01_exploratory_amazon.ipynb  02_exploratory_fashion.ipynb  03_exploratory_movielens.ipynb  04_exploratory_visualgenome.ipynb  experiments.ipynb  fashion_sample.ipynb  movielens_sample.ipynb  vg_sample.ipynb
scripts/: check_cuda.py  checking_label_balance_and_null_values.py  preprocess_amazon.py  preprocess_fashion.py  preprocess_movielens.py  preprocess_visualgenome.py  sanity_check.py  temp.py
src/comparative/configs/: config.yaml  eval.yaml  hardware.yaml  trainer.yaml
src/comparative/configs/data/: amazon.yaml  fashion.yaml  movielens.yaml  visualgenome.yaml
src/comparative/configs/model/: classical_early.yaml  classical_early_visualgenome.yaml  classical_late.yaml  classical_late_visualgenome.yaml  clip.yaml  clip_dual_encoder.yaml  clip_dual_encoder_emb.yaml  clip_text_only.yaml  clip_visualgenome.yaml  hybrid.yaml  mvae.yaml  mvae_visualgenome.yaml  vilbert.yaml  vilbert_embed.yaml  vilbert_style.yaml  (+1 more)
src/comparative/datasets/: __init__.py  amazon_datamodule.py  fashion_datamodule.py  movielens_datamodule.py  visualgenome_datamodule.py
src/comparative/evaluation/: __init__.py  latent_analysis.py  metrics.py  retrieval.py  visualization.py
src/comparative/training/: __init__.py  callbacks.py  cli.py  train.py
src/comparative/utils/: __init__.py  checkpoint.py  hardware.py  logging.py  paths.py  seed.py  timer.py
(+16 files in other folders)
